--- a/classes/software-engineering-101-introduction-to-git/index.org
+++ b/classes/software-engineering-101-introduction-to-git/index.org
@@ -1,36 +1,27 @@
-* Software Engineering 101: Introduction to Git
+#+TITLE: Null Space Labs: Software Engineering 101: Introduction to Git
+Welcome to *NSL 3.0's* class *Software Engineering 101: Introduction to Git* where you, the aspiring git Hacker will watch, learn, and do in your quest to revise code in an ordered manner.
 
-  Welcome to *NSL 3.0's* class *Software Engineering 101: Introduction to Git* where you, the aspiring git Hacker will watch, learn, and do in your quest to revise code in an ordered manner.
-
-  This is a beginner's introduction but hopefully you at least have a copy of [[https://git-scm.com/downloads][git]] *version 2* or greater available to you and an editor of some kind (for later).
-
+This is a beginner's introduction but hopefully you at least have:
+- [[https://git-scm.com/downloads][git]] *version 2* or greater available to you on a system
+- An editor of some kind (for later).
 * git
-
   - /git/ :: /noun/ =BRITISH= an unpleasant or contemptible person
 
-    #+CAPTION: Linus Torvalds explains why he named the software "git", British slang meaning "a rotten person,"
-    #+BEGIN_QUOTE
-    I'm an egotistical bastard, so I name all my projects after myself. First Linux, now git.
-    -- Linus Torvalds
-    #+END_QUOTE
-
+#+CAPTION: Linus Torvalds explains why he named the software "git", British slang meaning "a rotten person,"
+#+BEGIN_QUOTE
+I'm an egotistical bastard, so I name all my projects after myself. First Linux, now git.
+-- Linus Torvalds
+#+END_QUOTE
 ** References
-
    - [[https://git-scm.com/book/en/v2][Git SCM Book]]
-
 ** Social coding
-
    - [[https://github.com/nikolas/github-drama][Github Drama]]
    - [[https://github.com/antirez/redis/issues/3185][Replace "master" and "slave" terms in Redis #3185]]
-
 * Why
-
   #+CAPTION: This is the reason why
   #+attr_html: :width 800px
   [[file:images/the-real-version-control.png]]
-
 ** Comics
-
    #+CAPTION: Yes, you do
    #+attr_html: :width 800px
    [[file:images/2009-01-26-who-needs-git.png]]
@@ -44,18 +35,14 @@
 
    #+CAPTION: Squashing and Rebasing preferred
    [[file:images/xkcd-1296-git-commit.png]]
-
 ** Benefits to you, the Hacker
-
    - History :: Store your data with all changes through time
    - Integrity :: Since everything is hashed and full objects stored
    - Flexibility :: Support the workflow that works for you no matter how custom
    - Discoverability :: Share your code publicly and maybe get some contributors
-
 * How
 ** Git under the hood
 *** [[https://git-scm.com/book/en/v2/Getting-Started-Git-Basics][git book: Getting Started: Git Basics]]
-
     - =SVN= and =CVS= :: /centralized/ difference-based systems
     - =SVN= :: Known to corrupt over time, thanks to this architecture
     - =git= :: by contrast, is /decentralized/ and /snapshot/ based with all data /hashed/ and /packed/
@@ -65,22 +52,18 @@
     - Working Directory :: The currently being worked on directory tree
     - Staging Area :: The ready to be committed data
     - Repository :: The committed data
-
 ** Git work flows
-
    Generally you should go for something like [[https://guides.github.com/introduction/flow/][Github Flow]] in modern times where one is =Continuously Integrating= and =Continuously Deploying=.
 
    Sometimes, though, you may have needs that are best served by Gitflow or maybe the generalized streams described in [[https://bitbucket.org/yujiewu/hgflow/wiki/Home][hgflow]].
 
    Specifically, if you need to be able to support a live production product that may need to be /hotfixed/ and deployed without bringing in new changes in the /development/ stream, then you might want to use a more complicated work flow.
-
 *** [[https://www.atlassian.com/git/tutorials/comparing-workflows][Atlassian: Comparing Workflows]]
 *** [[http://nvie.com/posts/a-successful-git-branching-model/][Gitflow: A successful git branching model]]
 **** [[https://github.com/nvie/gitflow][gitflow plugin for git]]
 *** [[http://endoflineblog.com/oneflow-a-git-branching-model-and-workflow][Oneflow]]
 *** [[https://guides.github.com/introduction/flow/][Github Flow]]
 ** Git commandline overview
-
    - =git init= :: Initialize the current directory as a git repository
    - =git flow init= :: Initialize the current repository as a /gitflow/ repository
    - =git clone= :: Clone the entire history of a remote repository to a new local repository
@@ -102,7 +85,6 @@
    - =git pull= :: Perform a =fetch= and =merge= on the current branch against any tracked upstreams
    - =git rebase= :: Perform a =rebase= of unpushed commits
    - =git rebase= -i :: Perform an /interactive/ =rebase= of unpushed commits
-
 *** [[https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup][git book: Getting Started: First Time Git Setup]]
 * What
 ** [[https://help.github.com/articles/fork-a-repo/][github help: Fork a Repo]]
